# QtUtils

./: API.md  CMakeLists.txt  Doxygen.cfg.in  File.cpp  File.h  HttpRequest.cpp  HttpRequest.h  Job.cpp  Job.h  Qt5.natvis  QuickView.cpp  QuickView.h  Readme.md  Settings.cpp  Settings.h  Setup.h  Utils.h
BuildScripts/: Readme.md  build.bat  build.sh  setup.bat  setup.sh  update.bat  update.sh
